--- a/week3_solution/index.html
+++ b/week3_solution/index.html
@@ -18,7 +18,7 @@
   </head>
 <body>
   <header>
-      <nav class="navbar navbar-default navbar-fixed-top test">
+      <nav class="test navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <!-- <a href="index.html" class="pull-left visible-md visible-lg">
@@ -43,13 +43,13 @@
         <div id="collapsable-nav" class="collapse navbar-collapse ">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
-              <a href="#"><br class="visible-xs"> Chicken</a>
+              <a href="#"><br class="visible-xs "> Chicken</a>
             </li>
             <li>
-              <a href="#"><br class="visible-xs"> Beef</a>
+              <a href="#"><br class="visible-xs "> Beef</a>
             </li>
             <li>
-              <a href="#"><br class= "visible-xs"> Sushi</a>
+              <a href="#"><br class= "visible-xs "> Sushi</a>
             </li>
 
           </ul><!-- #nav-list -->
@@ -61,10 +61,13 @@
 
   </header>
 
-  <p class="text-center">Our Menu</p>
+    <h1>Our Menu</h1>
 
-  <div class="text">
-    <div class="container-fluid">
+
+<div id="main-content" class="container">
+  <div class="row">
+  <div class="col-xs-12">
+    <div class="menu-text text-center">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque sit amet ligula quis facilisis. Maecenas sollicitudin turpis eget arcu posuere, aliquam vestibulum quam viverra. Donec non mi ultrices, efficitur leo vel, tristique diam. Aliquam volutpat porttitor lorem id feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
     </div>
   </div>
